@@ -56,6 +56,10 @@
   <util:properties id="authconfig">
     <prop key="allowadminuser">${enable.adminUser}</prop>
   </util:properties>
+  
+  <util:properties id="debugconfig">
+    <prop key="debugenabled">${debug.enabled}</prop>
+  </util:properties> 
 
 
   <!-- ******************************************************************* -->
