@@ -2,3 +2,4 @@ odataserver.address=/denodo-odata.svc
 server.pageSize=1000
 enable.adminUser=true
 odataserver.serviceRoot=
+debug.enabled=false
